add rmul and exp methods

--- a/karpathy_videos/01_nn_backprop.ipynb
+++ b/karpathy_videos/01_nn_backprop.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +278,7 @@
     "        return f\"Value(data={self.data})\"\n",
     "\n",
     "    def __add__(self, other):\n",
+    "        other = other if isinstance(other, Value) else Value(other) # to be able to process expressions as Value(3.0) + 1\n",
     "        out = Value(self.data + other.data, (self, other), '+')\n",
     "        def _backward():\n",
     "            self.grad += 1.0 * out.grad\n",
@@ -285,13 +286,24 @@
     "        out._backward = _backward\n",
     "        return out\n",
     "\n",
+    "    def __rmul__(self, other): # other * self\n",
+    "        return self * other\n",
+    "\n",
     "    def __mul__(self, other):\n",
+    "        other = other if isinstance(other, Value) else Value(other) # to be able to process expressions as Value(3.0) * 2\n",
     "        out = Value(self.data * other.data, (self, other), '*')\n",
     "        def _backward():\n",
     "            self.grad += other.data * out.grad\n",
     "            other.grad += self.data * out.grad\n",
     "        out._backward = _backward\n",
     "        return out\n",
+    "\n",
+    "    def exp(self):\n",
+    "        x = self.data\n",
+    "        out = Value(math.exp(x), (self, ), 'exp')\n",
+    "        def _backward():\n",
+    "            self.grad += out.data * out.grad\n",
+    "        out._backward = _backward\n",
     "\n",
     "    def tanh(self):\n",
     "        x = self.data\n",
