--- a/karpathy_videos/01_nn_backprop.ipynb
+++ b/karpathy_videos/01_nn_backprop.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,9 +286,6 @@
     "        out._backward = _backward\n",
     "        return out\n",
     "\n",
-    "    def __rmul__(self, other): # other * self\n",
-    "        return self * other\n",
-    "\n",
     "    def __mul__(self, other):\n",
     "        other = other if isinstance(other, Value) else Value(other) # to be able to process expressions as Value(3.0) * 2\n",
     "        out = Value(self.data * other.data, (self, other), '*')\n",
@@ -297,6 +294,26 @@
     "            other.grad += self.data * out.grad\n",
     "        out._backward = _backward\n",
     "        return out\n",
+    "\n",
+    "    def __pow__(self, other):\n",
+    "        assert isinstance(other, (int, float)), 'only supporting int/float powers for now'\n",
+    "        out = Value(self.data**other, (self, ), f'**{other}')\n",
+    "        def _backward():\n",
+    "            self.grad += other * self.data**(other - 1) * out.grad\n",
+    "        out._backward = _backward\n",
+    "        return out\n",
+    "\n",
+    "    def __rmul__(self, other): # other * self\n",
+    "        return self * other\n",
+    "\n",
+    "    def __truediv__(self, other): # self / other\n",
+    "        return self * other**-1\n",
+    "\n",
+    "    def __neg__(self): # -self\n",
+    "        self * -1\n",
+    "\n",
+    "    def __sub__(self, other): # self - other\n",
+    "        return self + (-other)\n",
     "\n",
     "    def exp(self):\n",
     "        x = self.data\n",
@@ -1175,6 +1192,29 @@
     "m = k + k; m.label = 'm'\n",
     "m.backward()\n",
     "draw_dot(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=0.5)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = Value(2.0)\n",
+    "m = Value(4.0)\n",
+    "\n",
+    "k / m"
    ]
   },
   {
