finished training our own nn

--- a/karpathy_videos/01_nn_backprop.ipynb
+++ b/karpathy_videos/01_nn_backprop.ipynb
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,16 +1771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Value(data=0.008577848803381624)"
+       "Value(data=0.0046005526456244766)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,9 +1793,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Value(data=0.9947757100599569),\n",
+       " Value(data=-0.999973034568912),\n",
+       " Value(data=-0.999902899788392),\n",
+       " Value(data=0.9323741966061676)]"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ypred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# It's perfect. We trained our own NeuralNet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
