--- a/karpathy_videos/01_nn_backprop.ipynb
+++ b/karpathy_videos/01_nn_backprop.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating own NN from scratch (based on Andey Karpathy's educational video)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
