fix andrej's name

--- a/karpathy_videos/01_nn_backprop.ipynb
+++ b/karpathy_videos/01_nn_backprop.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating own NN from scratch (based on Andey Karpathy's educational video)"
+    "# Creating own NN from scratch (based on Andej Karpathy's educational video)"
    ]
   },
   {
