--- a/karpathy_videos/02_intro_to_lm.ipynb
+++ b/karpathy_videos/02_intro_to_lm.ipynb
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,13 +1444,378 @@
     "ys = torch.tensor(ys)\n",
     "\n",
     "g = torch.Generator().manual_seed(2147483647)\n",
-    "W = torch.randn((27, 27), generator=g)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)\n",
+    "\n",
+    "# forward pass\n",
     "\n",
     "xenc = F.one_hot(xs, num_classes=27).float()\n",
     "logits = xenc @ W\n",
     "counts = logits.exp()\n",
     "probs = counts / counts.sum(1, keepdims=True)\n",
-    "# the last 2 lines here are together called a 'softmax'"
+    "# the last 2 lines here are together called a 'softmax'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 27])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.0123, grad_fn=<SelectBackward0>),\n",
+       " tensor(0.0181, grad_fn=<SelectBackward0>),\n",
+       " tensor(0.0267, grad_fn=<SelectBackward0>),\n",
+       " tensor(0.0737, grad_fn=<SelectBackward0>),\n",
+       " tensor(0.0150, grad_fn=<SelectBackward0>))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probs[0, 5], probs[1, 13], probs[2, 13], probs[3, 1], probs[4, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(3.7693, grad_fn=<NegBackward0>)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = -probs[torch.arange(5), ys].log().mean() # negative log likelihood\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backward pass\n",
+    "\n",
+    "W.grad = None\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update\n",
+    "\n",
+    "W.data += -0.1 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7693049907684326\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's put everything together one more time (dataset, NN initialization, forward pass, backward pass, update)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs, ys = [], []\n",
+    "\n",
+    "for w in words[:1]:\n",
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        xs.append(ix1)\n",
+    "        ys.append(ix2)\n",
+    "\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# forward pass\n",
+    "\n",
+    "xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "logits = xenc @ W\n",
+    "counts = logits.exp()\n",
+    "probs = counts / counts.sum(1, keepdims=True)\n",
+    "# the last 2 lines here are together called a 'softmax'\n",
+    "\n",
+    "loss = -probs[torch.arange(5), ys].log().mean() # negative log likelihood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7291626930236816\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backward pass\n",
+    "\n",
+    "W.grad = None\n",
+    "loss.backward()\n",
+    "\n",
+    "# update\n",
+    "\n",
+    "W.data += -0.1 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's make a loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "228146\n"
+     ]
+    }
+   ],
+   "source": [
+    "xs, ys = [], []\n",
+    "\n",
+    "for w in words:\n",
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        xs.append(ix1)\n",
+    "        ys.append(ix2)\n",
+    "\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)\n",
+    "\n",
+    "num = xs.nelement()\n",
+    "print(num)\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.758953332901001\n",
+      "3.6702587604522705\n",
+      "3.591154098510742\n",
+      "3.520017385482788\n",
+      "3.4557950496673584\n",
+      "3.3977162837982178\n",
+      "3.3451638221740723\n",
+      "3.297590494155884\n",
+      "3.254484176635742\n",
+      "3.2153542041778564\n",
+      "3.1797330379486084\n",
+      "3.147188901901245\n",
+      "3.117339849472046\n",
+      "3.0898516178131104\n",
+      "3.064443588256836\n",
+      "3.0408785343170166\n",
+      "3.0189590454101562\n",
+      "2.998518943786621\n",
+      "2.9794163703918457\n",
+      "2.9615297317504883\n",
+      "2.9447529315948486\n",
+      "2.928992509841919\n",
+      "2.9141643047332764\n",
+      "2.900193452835083\n",
+      "2.887012243270874\n",
+      "2.874558687210083\n",
+      "2.862776279449463\n",
+      "2.851613998413086\n",
+      "2.841024398803711\n",
+      "2.830965757369995\n",
+      "2.8213977813720703\n",
+      "2.812286376953125\n",
+      "2.8035972118377686\n",
+      "2.7953007221221924\n",
+      "2.7873711585998535\n",
+      "2.7797818183898926\n",
+      "2.7725107669830322\n",
+      "2.7655372619628906\n",
+      "2.7588419914245605\n",
+      "2.7524070739746094\n",
+      "2.7462172508239746\n",
+      "2.7402572631835938\n",
+      "2.734513998031616\n",
+      "2.7289748191833496\n",
+      "2.723628520965576\n",
+      "2.7184643745422363\n",
+      "2.713472366333008\n",
+      "2.708644390106201\n",
+      "2.7039716243743896\n",
+      "2.699446678161621\n",
+      "2.6950621604919434\n",
+      "2.6908111572265625\n",
+      "2.6866886615753174\n",
+      "2.682687997817993\n",
+      "2.678804397583008\n",
+      "2.675032615661621\n",
+      "2.671367883682251\n",
+      "2.6678059101104736\n",
+      "2.6643431186676025\n",
+      "2.6609747409820557\n",
+      "2.657698154449463\n",
+      "2.6545090675354004\n",
+      "2.651404619216919\n",
+      "2.6483819484710693\n",
+      "2.645437479019165\n",
+      "2.6425693035125732\n",
+      "2.6397740840911865\n",
+      "2.637049674987793\n",
+      "2.6343932151794434\n",
+      "2.631803035736084\n",
+      "2.6292762756347656\n",
+      "2.6268115043640137\n",
+      "2.624406576156616\n",
+      "2.6220591068267822\n",
+      "2.6197681427001953\n",
+      "2.6175308227539062\n",
+      "2.6153454780578613\n",
+      "2.6132113933563232\n",
+      "2.611126661300659\n",
+      "2.6090891361236572\n",
+      "2.60709810256958\n",
+      "2.605151653289795\n",
+      "2.6032485961914062\n",
+      "2.6013879776000977\n",
+      "2.5995678901672363\n",
+      "2.5977871417999268\n",
+      "2.59604549407959\n",
+      "2.5943403244018555\n",
+      "2.5926713943481445\n",
+      "2.5910379886627197\n",
+      "2.5894384384155273\n",
+      "2.58787202835083\n",
+      "2.5863375663757324\n",
+      "2.584834337234497\n",
+      "2.5833616256713867\n",
+      "2.581918239593506\n",
+      "2.580503225326538\n",
+      "2.5791165828704834\n",
+      "2.57775616645813\n",
+      "2.5764224529266357\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gradient descent\n",
+    "\n",
+    "for k in range(100):\n",
+    "    # forward pass\n",
+    "\n",
+    "    xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "    logits = xenc @ W\n",
+    "    counts = logits.exp()\n",
+    "    probs = counts / counts.sum(1, keepdims=True)\n",
+    "    # the last 2 lines here are together called a 'softmax'\n",
+    "\n",
+    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean() # negative log likelihood with L2 regularization\n",
+    "\n",
+    "    print(loss.item())\n",
+    "\n",
+    "    # backward pass\n",
+    "    W.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # update\n",
+    "    W.data += -10 * W.grad"
    ]
   },
   {
