sampling from model. final commit

--- a/karpathy_videos/02_intro_to_lm.ipynb
+++ b/karpathy_videos/02_intro_to_lm.ipynb
@@ -1684,113 +1684,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.758953332901001\n",
-      "3.6702587604522705\n",
-      "3.591154098510742\n",
-      "3.520017385482788\n",
-      "3.4557950496673584\n",
-      "3.3977162837982178\n",
-      "3.3451638221740723\n",
-      "3.297590494155884\n",
-      "3.254484176635742\n",
-      "3.2153542041778564\n",
-      "3.1797330379486084\n",
-      "3.147188901901245\n",
-      "3.117339849472046\n",
-      "3.0898516178131104\n",
-      "3.064443588256836\n",
-      "3.0408785343170166\n",
-      "3.0189590454101562\n",
-      "2.998518943786621\n",
-      "2.9794163703918457\n",
-      "2.9615297317504883\n",
-      "2.9447529315948486\n",
-      "2.928992509841919\n",
-      "2.9141643047332764\n",
-      "2.900193452835083\n",
-      "2.887012243270874\n",
-      "2.874558687210083\n",
-      "2.862776279449463\n",
-      "2.851613998413086\n",
-      "2.841024398803711\n",
-      "2.830965757369995\n",
-      "2.8213977813720703\n",
-      "2.812286376953125\n",
-      "2.8035972118377686\n",
-      "2.7953007221221924\n",
-      "2.7873711585998535\n",
-      "2.7797818183898926\n",
-      "2.7725107669830322\n",
-      "2.7655372619628906\n",
-      "2.7588419914245605\n",
-      "2.7524070739746094\n",
-      "2.7462172508239746\n",
-      "2.7402572631835938\n",
-      "2.734513998031616\n",
-      "2.7289748191833496\n",
-      "2.723628520965576\n",
-      "2.7184643745422363\n",
-      "2.713472366333008\n",
-      "2.708644390106201\n",
-      "2.7039716243743896\n",
-      "2.699446678161621\n",
-      "2.6950621604919434\n",
-      "2.6908111572265625\n",
-      "2.6866886615753174\n",
-      "2.682687997817993\n",
-      "2.678804397583008\n",
-      "2.675032615661621\n",
-      "2.671367883682251\n",
-      "2.6678059101104736\n",
-      "2.6643431186676025\n",
-      "2.6609747409820557\n",
-      "2.657698154449463\n",
-      "2.6545090675354004\n",
-      "2.651404619216919\n",
-      "2.6483819484710693\n",
-      "2.645437479019165\n",
-      "2.6425693035125732\n",
-      "2.6397740840911865\n",
-      "2.637049674987793\n",
-      "2.6343932151794434\n",
-      "2.631803035736084\n",
-      "2.6292762756347656\n",
-      "2.6268115043640137\n",
-      "2.624406576156616\n",
-      "2.6220591068267822\n",
-      "2.6197681427001953\n",
-      "2.6175308227539062\n",
-      "2.6153454780578613\n",
-      "2.6132113933563232\n",
-      "2.611126661300659\n",
-      "2.6090891361236572\n",
-      "2.60709810256958\n",
-      "2.605151653289795\n",
-      "2.6032485961914062\n",
-      "2.6013879776000977\n",
-      "2.5995678901672363\n",
-      "2.5977871417999268\n",
-      "2.59604549407959\n",
-      "2.5943403244018555\n",
-      "2.5926713943481445\n",
-      "2.5910379886627197\n",
-      "2.5894384384155273\n",
-      "2.58787202835083\n",
-      "2.5863375663757324\n",
-      "2.584834337234497\n",
-      "2.5833616256713867\n",
-      "2.581918239593506\n",
-      "2.580503225326538\n",
-      "2.5791165828704834\n",
-      "2.57775616645813\n",
-      "2.5764224529266357\n"
+      "2.482236385345459\n",
+      "2.4822332859039307\n",
+      "2.4822299480438232\n",
+      "2.482226848602295\n",
+      "2.4822235107421875\n",
+      "2.4822211265563965\n",
+      "2.48221755027771\n",
+      "2.4822144508361816\n",
+      "2.4822115898132324\n",
+      "2.482208490371704\n",
+      "2.4822051525115967\n",
+      "2.4822020530700684\n",
+      "2.482199192047119\n",
+      "2.4821958541870117\n",
+      "2.4821925163269043\n",
+      "2.482189893722534\n",
+      "2.4821865558624268\n",
+      "2.4821836948394775\n",
+      "2.482180595397949\n",
+      "2.482177495956421\n",
+      "2.4821743965148926\n",
+      "2.4821715354919434\n",
+      "2.482168436050415\n",
+      "2.482165575027466\n",
+      "2.4821624755859375\n",
+      "2.4821596145629883\n",
+      "2.482156753540039\n",
+      "2.4821536540985107\n",
+      "2.4821505546569824\n",
+      "2.482147693634033\n",
+      "2.482145071029663\n",
+      "2.4821419715881348\n",
+      "2.4821391105651855\n",
+      "2.4821360111236572\n",
+      "2.482133388519287\n",
+      "2.4821300506591797\n",
+      "2.4821271896362305\n",
+      "2.4821243286132812\n",
+      "2.482121467590332\n",
+      "2.482118606567383\n",
+      "2.4821155071258545\n",
+      "2.4821128845214844\n",
+      "2.482110023498535\n",
+      "2.482107162475586\n",
+      "2.4821040630340576\n",
+      "2.4821014404296875\n",
+      "2.4820985794067383\n",
+      "2.482095718383789\n",
+      "2.48209285736084\n",
+      "2.4820899963378906\n",
+      "2.4820871353149414\n",
+      "2.482084274291992\n",
+      "2.482081413269043\n",
+      "2.482078790664673\n",
+      "2.482076406478882\n",
+      "2.4820728302001953\n",
+      "2.4820704460144043\n",
+      "2.4820680618286133\n",
+      "2.482064723968506\n",
+      "2.4820621013641357\n",
+      "2.4820594787597656\n",
+      "2.4820563793182373\n",
+      "2.4820539951324463\n",
+      "2.482051134109497\n",
+      "2.482048273086548\n",
+      "2.482046127319336\n",
+      "2.4820427894592285\n",
+      "2.4820406436920166\n",
+      "2.4820375442504883\n",
+      "2.4820351600646973\n",
+      "2.482032299041748\n",
+      "2.482029676437378\n",
+      "2.482027053833008\n",
+      "2.4820239543914795\n",
+      "2.4820215702056885\n",
+      "2.4820187091827393\n",
+      "2.4820163249969482\n",
+      "2.482013463973999\n",
+      "2.482011318206787\n",
+      "2.482008218765259\n",
+      "2.4820058345794678\n",
+      "2.4820032119750977\n",
+      "2.4820005893707275\n",
+      "2.481997489929199\n",
+      "2.4819953441619873\n",
+      "2.481992721557617\n",
+      "2.481990098953247\n",
+      "2.481987714767456\n",
+      "2.481984853744507\n",
+      "2.4819819927215576\n",
+      "2.4819796085357666\n",
+      "2.4819772243499756\n",
+      "2.4819746017456055\n",
+      "2.4819719791412354\n",
+      "2.4819693565368652\n",
+      "2.481966733932495\n",
+      "2.481964588165283\n",
+      "2.481961965560913\n",
+      "2.481959104537964\n",
+      "2.481956958770752\n"
      ]
     }
    ],
@@ -1819,10 +1819,89 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Now let's sample from our NN model (and our count-Model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mor.\n",
+      "axx.\n",
+      "minaymoryles.\n",
+      "kondlaisah.\n",
+      "anchshizarie.\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for i in range(5):\n",
+    "\n",
+    "    out = []\n",
+    "    ix = 0\n",
+    "    while True:\n",
+    "\n",
+    "        # ----\n",
+    "        # Before\n",
+    "        p = P[ix]\n",
+    "\n",
+    "        # -----\n",
+    "        # NOW\n",
+    "        # xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()\n",
+    "        # logits = xenc @ W\n",
+    "        # counts = logits.exp()\n",
+    "        # p = counts / counts.sum(1, keepdims=True)\n",
+    "\n",
+    "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itos[ix])\n",
+    "        if ix == 0:\n",
+    "            break\n",
+    "    \n",
+    "    print(''.join(out))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NN result\n",
+    "\n",
+    "mor.\n",
+    "axx.\n",
+    "minaymoryles.\n",
+    "kondlaisah.\n",
+    "anchthizarie.\n",
+    "\n",
+    "#### Count-based result\n",
+    "\n",
+    "mor.\n",
+    "axx.\n",
+    "minaymoryles.\n",
+    "kondlaisah.\n",
+    "anchshizarie.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JUST WOW"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
