weights init for lower loss

--- a/karpathy_videos/04_mlp_act_and_grad.ipynb
+++ b/karpathy_videos/04_mlp_act_and_grad.ipynb
@@ -338,11 +338,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loss at Initialization\n",
+    "\n",
+    "When we init out NN with random weights the loss is too high. Usually we can guess the loss value which we want to get as a result, so we can start training our NN with \"better\" weights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(3.2958)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-torch.tensor(1/27.0).log() # 1/27.0 - this a probability of each character assumed we have a uniform distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so 3.2958 - our tartget initialization loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.2500, 0.2500, 0.2500, 0.2500]), tensor(1.3863))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4-dimensional example of the issue (look at loss)\n",
+    "\n",
+    "logits = torch.tensor([0.0, 0.0, 0.0, 0.0])\n",
+    "probs = torch.softmax(logits, dim=0)\n",
+    "loss = -probs[2].log()\n",
+    "probs, loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([3.1741e-04, 9.4620e-01, 6.3754e-03, 4.7108e-02]), tensor(5.0553))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4-dimensional example of the issue (look at loss)\n",
+    "\n",
+    "logits = torch.tensor([-3.0, 5.0, 0.0, 2.0])\n",
+    "probs = torch.softmax(logits, dim=0)\n",
+    "loss = -probs[2].log()\n",
+    "probs, loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We want our logits to be ~0.0 when we initalize out network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lets reinit our NN to achive this"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# MLP revisited\n",
+    "\n",
+    "n_embd = 10 # the dim of the character embedding vectors\n",
+    "n_hidden = 200 # the number of neurons in the hidden layer of the MLP\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "C = torch.randn((vocab_size, n_embd), generator=g)\n",
+    "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g)\n",
+    "b1 = torch.randn(n_hidden, generator=g)\n",
+    "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.1\n",
+    "b2 = torch.randn(vocab_size, generator=g) * 0\n",
+    "\n",
+    "parameters = [C, W1, b1, W2, b2]\n",
+    "print(sum(p.nelement() for p in parameters))\n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True"
+   ]
   }
  ],
  "metadata": {
