--- a/karpathy_videos/04_mlp_act_and_grad.ipynb
+++ b/karpathy_videos/04_mlp_act_and_grad.ipynb
@@ -1360,6 +1360,226 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### The idea is that if we want our weights to be Gaussian distributed we can just normalize them when we forward-pass it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12297\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MLP revisited\n",
+    "\n",
+    "n_embd = 10 # the dim of the character embedding vectors\n",
+    "n_hidden = 200 # the number of neurons in the hidden layer of the MLP\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "C = torch.randn((vocab_size, n_embd), generator=g)\n",
+    "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3) / ((n_embd * block_size)**0.5) # Kaimin init\n",
+    "b1 = torch.randn(n_hidden, generator=g) * 0.01\n",
+    "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.01 # we scale down out weights (they influence on our logits)\n",
+    "b2 = torch.randn(vocab_size, generator=g) * 0 # we zero down out bias (it influences on our logits)\n",
+    "\n",
+    "bngain = torch.ones((1, n_hidden))\n",
+    "bnbias = torch.zeros((1, n_hidden))\n",
+    "\n",
+    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]\n",
+    "print(sum(p.nelement() for p in parameters))\n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 200])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hpreact.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 200])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hpreact.mean(0, keepdim=True).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 200])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hpreact.std(0, keepdim=True).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0/ 200000: 3.3147\n",
+      "  10000/ 200000: 2.1984\n",
+      "  20000/ 200000: 2.3375\n",
+      "  30000/ 200000: 2.4359\n",
+      "  40000/ 200000: 2.0119\n",
+      "  50000/ 200000: 2.2595\n",
+      "  60000/ 200000: 2.4775\n",
+      "  70000/ 200000: 2.1020\n",
+      "  80000/ 200000: 2.2788\n",
+      "  90000/ 200000: 2.1862\n",
+      " 100000/ 200000: 1.9474\n",
+      " 110000/ 200000: 2.3010\n",
+      " 120000/ 200000: 1.9837\n",
+      " 130000/ 200000: 2.4523\n",
+      " 140000/ 200000: 2.3839\n",
+      " 150000/ 200000: 2.1987\n",
+      " 160000/ 200000: 1.9733\n",
+      " 170000/ 200000: 1.8668\n",
+      " 180000/ 200000: 1.9973\n",
+      " 190000/ 200000: 1.8347\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_steps = 200000\n",
+    "batch_size = 32\n",
+    "lossi = []\n",
+    "\n",
+    "for i in range(max_steps):\n",
+    "    # minibatch construct\n",
+    "    ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y\n",
+    "\n",
+    "    # forward pass\n",
+    "    emb = C[Xb] # embed the character into vectors\n",
+    "    embcat = emb.view(emb.shape[0], -1) # concatenate vectors\n",
+    "    hpreact = embcat @ W1 + b1 # hidden layer preactivation\n",
+    "    hpreact = bngain * (hpreact - hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias # Batch Normalization!!!\n",
+    "    h = torch.tanh(hpreact) # hidden layer\n",
+    "    logits = h @ W2 + b2 # output layer\n",
+    "    loss = F.cross_entropy(logits, Yb) # loss function\n",
+    "\n",
+    "    # backward pass\n",
+    "    for p in parameters:\n",
+    "        p.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # update\n",
+    "    lr = 0.1 if i < 100000 else 0.01\n",
+    "    for p in parameters:\n",
+    "        p.data += -lr * p.grad\n",
+    "\n",
+    "    # track stats\n",
+    "    if i % 10000 == 0:\n",
+    "        print(f'{i: 7d}/{max_steps:7d}: {loss.item():.4f}')\n",
+    "    lossi.append(loss.log10().item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.0668270587921143\n",
+      "val 2.104844808578491\n"
+     ]
+    }
+   ],
+   "source": [
+    "# and we got better validation loss\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def split_loss(split):\n",
+    "    x, y = {\n",
+    "        'train': (Xtr, Ytr),\n",
+    "        'val': (Xdev, Ydev),\n",
+    "        'test': (Xte, Yte),\n",
+    "    }[split]\n",
+    "    emb = C[x]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1 # hidden layer preactivation\n",
+    "    hpreact = bngain * (hpreact - hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias # Batch Normalization!!!\n",
+    "    h = torch.tanh(hpreact)\n",
+    "    logits = h @ W2 + b2\n",
+    "    loss = F.cross_entropy(logits, y)\n",
+    "    print(split, loss.item())\n",
+    "\n",
+    "split_loss('train')\n",
+    "split_loss('val')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The problem of a Batch Normalization is that it transforms matematically examples in a Batch. That kinda makes examples in different batches transformed different ways. On one hand it has a good side-effect that it brings a regularization to our network (due to the noize in our inputs), but on the other hand it makes it less deterministic. So we want to fix it. We can do it with Layer Normalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# But BatchNorm performs really well"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
