--- a/karpathy_videos/04_mlp_act_and_grad.ipynb
+++ b/karpathy_videos/04_mlp_act_and_grad.ipynb
@@ -1580,6 +1580,398 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# How do we feed a single example and get sensible result out?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# We need to calibrate the batch norm at the end of training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    emb = C[Xtr]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1\n",
+    "    # measure the mean/std over the entire training set\n",
+    "    bnmean = hpreact.mean(0, keepdim=True)\n",
+    "    bnstd = hpreact.std(0, keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.0668270587921143\n",
+      "val 2.1049270629882812\n"
+     ]
+    }
+   ],
+   "source": [
+    "# and we got better validation loss\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def split_loss(split):\n",
+    "    x, y = {\n",
+    "        'train': (Xtr, Ytr),\n",
+    "        'val': (Xdev, Ydev),\n",
+    "        'test': (Xte, Yte),\n",
+    "    }[split]\n",
+    "    emb = C[x]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1 # hidden layer preactivation\n",
+    "    # hpreact = bngain * (hpreact - hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias # Batch Normalization!!!\n",
+    "    hpreact = bngain * (hpreact - bnmean) / bnstd + bnbias\n",
+    "    h = torch.tanh(hpreact)\n",
+    "    logits = h @ W2 + b2\n",
+    "    loss = F.cross_entropy(logits, y)\n",
+    "    print(split, loss.item())\n",
+    "\n",
+    "split_loss('train')\n",
+    "split_loss('val')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now we can inference a single example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# But we can estimate it in a running matter while we train out network. This will allow us to avoid the second step. (No one likes extra steps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tip: if you add a BatchNorm layer after some linear layer, you can remove Bias from it, because it won't affect anything (just think about how normalization works)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12097\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MLP revisited\n",
+    "\n",
+    "n_embd = 10 # the dim of the character embedding vectors\n",
+    "n_hidden = 200 # the number of neurons in the hidden layer of the MLP\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "C = torch.randn((vocab_size, n_embd), generator=g)\n",
+    "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3) / ((n_embd * block_size)**0.5) # Kaimin init\n",
+    "# b1 = torch.randn(n_hidden, generator=g) * 0.01\n",
+    "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.01 # we scale down out weights (they influence on our logits)\n",
+    "b2 = torch.randn(vocab_size, generator=g) * 0 # we zero down out bias (it influences on our logits)\n",
+    "\n",
+    "bngain = torch.ones((1, n_hidden))\n",
+    "bnbias = torch.zeros((1, n_hidden))\n",
+    "\n",
+    "bnmean_running = torch.zeros((1, n_hidden))\n",
+    "bnstd_running = torch.ones((1, n_hidden))\n",
+    "\n",
+    "parameters = [C, W1, \n",
+    "    #b1, \n",
+    "    W2, b2, bngain, bnbias]\n",
+    "print(sum(p.nelement() for p in parameters))\n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0/ 200000: 3.3239\n",
+      "  10000/ 200000: 2.0322\n",
+      "  20000/ 200000: 2.5675\n",
+      "  30000/ 200000: 2.0125\n",
+      "  40000/ 200000: 2.2446\n",
+      "  50000/ 200000: 1.8897\n",
+      "  60000/ 200000: 2.0785\n",
+      "  70000/ 200000: 2.3681\n",
+      "  80000/ 200000: 2.2918\n",
+      "  90000/ 200000: 2.0238\n",
+      " 100000/ 200000: 2.3673\n",
+      " 110000/ 200000: 2.3132\n",
+      " 120000/ 200000: 1.6414\n",
+      " 130000/ 200000: 1.9311\n",
+      " 140000/ 200000: 2.2231\n",
+      " 150000/ 200000: 2.0027\n",
+      " 160000/ 200000: 2.0997\n",
+      " 170000/ 200000: 2.4949\n",
+      " 180000/ 200000: 2.0199\n",
+      " 190000/ 200000: 2.1707\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_steps = 200000\n",
+    "batch_size = 32\n",
+    "lossi = []\n",
+    "\n",
+    "for i in range(max_steps):\n",
+    "    # minibatch construct\n",
+    "    ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y\n",
+    "\n",
+    "    # forward pass\n",
+    "    emb = C[Xb] # embed the character into vectors\n",
+    "    embcat = emb.view(emb.shape[0], -1) # concatenate vectors\n",
+    "\n",
+    "    # Linear Layer -----------------------------------\n",
+    "\n",
+    "    hpreact = embcat @ W1 # + b1 # hidden layer preactivation\n",
+    "\n",
+    "    # BatchNorm Layer --------------------------------\n",
+    "\n",
+    "    bnmeani = hpreact.mean(0, keepdim=True)\n",
+    "    bnstdi = hpreact.std(0, keepdim=True)\n",
+    "    hpreact = bngain * (hpreact - bnmeani) / bnstdi + bnbias # Batch Normalization!!!\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        bnmean_running = 0.999 * bnmean_running + 0.001 * bnmeani\n",
+    "        bnstd_running = 0.999 * bnstd_running + 0.001 * bnstdi\n",
+    "\n",
+    "    # Non-linearity ------------------------------------\n",
+    "\n",
+    "    h = torch.tanh(hpreact) # hidden layer\n",
+    "    logits = h @ W2 + b2 # output layer\n",
+    "    loss = F.cross_entropy(logits, Yb) # loss function\n",
+    "\n",
+    "    # backward pass\n",
+    "    for p in parameters:\n",
+    "        p.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # update\n",
+    "    lr = 0.1 if i < 100000 else 0.01\n",
+    "    for p in parameters:\n",
+    "        p.data += -lr * p.grad\n",
+    "\n",
+    "    # track stats\n",
+    "    if i % 10000 == 0:\n",
+    "        print(f'{i: 7d}/{max_steps:7d}: {loss.item():.4f}')\n",
+    "    lossi.append(loss.log10().item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we do it just to compare our results of running estimation with the second-step results (it should be very close)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    emb = C[Xtr]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1\n",
+    "    # measure the mean/std over the entire training set\n",
+    "    bnmean = hpreact.mean(0, keepdim=True)\n",
+    "    bnstd = hpreact.std(0, keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.4155e+00,  3.5980e-01, -1.2714e+00,  1.3146e+00,  9.5401e-01,\n",
+       "          1.0053e+00,  1.5467e+00, -1.9309e+00,  1.1036e+00,  1.2525e+00,\n",
+       "         -1.7996e+00, -2.7801e+00,  7.5269e-02, -5.8463e-01,  4.4472e-01,\n",
+       "         -6.8417e-01,  7.7318e-01, -2.1998e+00, -2.1400e-01,  1.6026e+00,\n",
+       "         -8.8026e-01,  9.7818e-02, -2.4424e-01,  4.0673e-01,  1.0444e+00,\n",
+       "          1.6453e+00,  1.2090e+00,  9.5449e-01,  3.6648e-01,  1.9436e+00,\n",
+       "         -6.5974e-02, -1.2044e+00, -1.0077e-01, -2.8142e-01, -4.8431e-01,\n",
+       "         -1.5074e+00, -2.6169e+00,  5.4709e-02, -1.5000e-03,  6.1692e-01,\n",
+       "         -2.2766e-01, -8.9404e-01, -2.7207e-01, -2.0177e-01,  6.4714e-01,\n",
+       "          8.9469e-01,  1.5835e+00, -3.9380e-01,  1.9980e+00,  1.0549e+00,\n",
+       "          1.7120e+00, -7.9726e-01,  2.0453e+00,  3.6367e-01,  5.4204e-01,\n",
+       "         -1.9238e+00, -2.0423e-02,  7.3257e-01,  9.0093e-01, -7.7813e-01,\n",
+       "         -6.6497e-01,  9.7269e-01,  4.9276e-01,  2.9063e-01,  1.1454e+00,\n",
+       "          1.6409e+00, -1.3144e+00,  2.4281e+00, -5.1554e-01,  4.7720e-01,\n",
+       "         -9.9833e-01,  2.2278e-01,  1.0464e+00, -1.5677e+00, -3.0708e+00,\n",
+       "          5.9081e-01,  7.5495e-01, -5.5865e-02,  4.6527e-01,  7.5729e-01,\n",
+       "          2.6439e-01,  1.2648e+00,  1.3846e+00,  5.5679e-01, -2.0356e-01,\n",
+       "         -6.7972e-02, -1.3310e+00,  4.9894e-01,  1.1616e-01, -4.6048e-01,\n",
+       "         -3.7639e-01,  1.4757e+00, -1.1262e+00, -8.7646e-01, -9.8438e-01,\n",
+       "          2.8750e-01, -3.0949e-01,  1.3186e-01,  2.8803e-01, -1.0697e+00,\n",
+       "          2.4569e-01,  6.9984e-01, -1.4201e+00,  1.0845e+00,  4.6677e-01,\n",
+       "         -1.7578e-01, -4.9292e-01, -1.2916e-01,  9.7323e-01, -1.0301e+00,\n",
+       "          7.9175e-01,  1.7915e-01,  2.3936e-01,  9.6761e-01,  2.9506e+00,\n",
+       "          1.8876e+00,  1.6671e-01,  8.1063e-01,  4.4058e-01, -1.0525e-01,\n",
+       "         -1.1515e+00, -1.0595e+00,  4.2553e-01,  8.5717e-01, -7.0477e-01,\n",
+       "          8.5597e-02, -4.0536e-02, -3.8548e-01, -5.2270e-01, -1.0727e+00,\n",
+       "          2.6869e+00, -1.0061e+00,  7.6813e-01,  2.1892e+00,  4.2353e-01,\n",
+       "          1.1420e+00, -3.6984e-02,  1.8699e+00,  5.3737e-02,  4.6363e-01,\n",
+       "          1.4987e+00, -3.9909e-01,  1.9273e+00,  6.8642e-01,  8.1528e-02,\n",
+       "         -7.5707e-02,  1.1223e+00, -1.2264e+00,  3.5057e-01,  2.4480e-01,\n",
+       "         -1.7182e+00,  3.7590e-01,  1.2153e+00,  1.0557e+00,  5.2257e-01,\n",
+       "         -2.0522e-01,  9.9072e-01, -1.4438e+00,  4.4108e-02,  4.2715e-01,\n",
+       "          7.4849e-01, -4.6440e-01,  9.3210e-01, -1.1958e+00, -6.3307e-01,\n",
+       "         -4.9272e-01,  7.1985e-02,  4.9442e-01, -1.9083e+00,  1.2184e-01,\n",
+       "          9.3387e-01, -2.5081e+00,  2.3050e-02, -9.5054e-01, -5.1473e-01,\n",
+       "          1.1903e+00,  1.4651e+00, -1.1185e+00,  1.4501e+00, -1.5615e+00,\n",
+       "          1.6314e+00,  9.9903e-01,  1.4629e+00, -1.2556e+00,  3.7814e-01,\n",
+       "         -4.0029e-01, -1.0050e+00,  7.8981e-01,  1.8857e+00,  6.0364e-01,\n",
+       "          4.5772e-01,  1.4201e+00, -1.0102e+00,  6.7094e-01,  2.1026e-01,\n",
+       "          1.2706e+00,  1.3657e+00, -7.3492e-01, -4.1377e-02,  4.6910e-01]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bnmean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.4073e+00,  3.7331e-01, -1.2681e+00,  1.2967e+00,  9.6879e-01,\n",
+       "          9.8374e-01,  1.5422e+00, -1.9247e+00,  1.1060e+00,  1.2247e+00,\n",
+       "         -1.8296e+00, -2.7717e+00,  7.1382e-02, -6.1822e-01,  4.3366e-01,\n",
+       "         -6.6874e-01,  7.7062e-01, -2.1880e+00, -2.1888e-01,  1.5706e+00,\n",
+       "         -8.6629e-01,  1.0769e-01, -2.3912e-01,  4.1434e-01,  1.0355e+00,\n",
+       "          1.6324e+00,  1.1980e+00,  9.5800e-01,  3.5302e-01,  1.9480e+00,\n",
+       "         -8.0373e-02, -1.2021e+00, -9.8016e-02, -2.6651e-01, -4.7077e-01,\n",
+       "         -1.4911e+00, -2.6119e+00,  4.6961e-02, -2.9913e-04,  6.0432e-01,\n",
+       "         -2.3634e-01, -9.1243e-01, -2.8294e-01, -1.7834e-01,  6.5023e-01,\n",
+       "          9.0387e-01,  1.5864e+00, -3.9490e-01,  1.9726e+00,  1.0563e+00,\n",
+       "          1.7167e+00, -7.9533e-01,  2.0450e+00,  3.5585e-01,  5.4984e-01,\n",
+       "         -1.9198e+00, -3.1753e-02,  7.1274e-01,  9.0174e-01, -7.9930e-01,\n",
+       "         -6.7666e-01,  9.6929e-01,  4.8910e-01,  2.9598e-01,  1.1424e+00,\n",
+       "          1.6292e+00, -1.3298e+00,  2.4247e+00, -5.1583e-01,  4.8769e-01,\n",
+       "         -1.0141e+00,  2.5258e-01,  1.0364e+00, -1.5358e+00, -3.0635e+00,\n",
+       "          5.8796e-01,  7.5476e-01, -3.7510e-02,  4.7129e-01,  7.4793e-01,\n",
+       "          2.4880e-01,  1.2456e+00,  1.3811e+00,  5.6237e-01, -1.9893e-01,\n",
+       "         -6.7246e-02, -1.3354e+00,  4.9328e-01,  1.1922e-01, -4.6234e-01,\n",
+       "         -4.0244e-01,  1.4730e+00, -1.1222e+00, -8.7219e-01, -9.8712e-01,\n",
+       "          2.9699e-01, -3.1921e-01,  1.4933e-01,  2.8674e-01, -1.0267e+00,\n",
+       "          2.4872e-01,  6.9122e-01, -1.4251e+00,  1.0636e+00,  4.6233e-01,\n",
+       "         -1.9600e-01, -4.6788e-01, -1.2119e-01,  9.6224e-01, -1.0263e+00,\n",
+       "          7.6696e-01,  1.8950e-01,  2.1194e-01,  9.8555e-01,  2.9216e+00,\n",
+       "          1.9032e+00,  1.5854e-01,  7.9005e-01,  4.4995e-01, -1.0814e-01,\n",
+       "         -1.1788e+00, -1.0540e+00,  4.2658e-01,  8.5132e-01, -7.0132e-01,\n",
+       "          9.2378e-02, -5.1758e-02, -3.7888e-01, -5.0914e-01, -1.0754e+00,\n",
+       "          2.6798e+00, -9.9378e-01,  7.8560e-01,  2.1986e+00,  4.2333e-01,\n",
+       "          1.1442e+00, -4.0676e-02,  1.8567e+00,  4.7657e-02,  4.8326e-01,\n",
+       "          1.5269e+00, -3.9335e-01,  1.9466e+00,  7.1543e-01,  5.6459e-02,\n",
+       "         -6.7132e-02,  1.1483e+00, -1.2526e+00,  3.4191e-01,  2.4586e-01,\n",
+       "         -1.7174e+00,  3.8330e-01,  1.2315e+00,  1.0462e+00,  5.0716e-01,\n",
+       "         -1.9995e-01,  9.7843e-01, -1.4476e+00,  4.4552e-02,  4.1619e-01,\n",
+       "          7.1786e-01, -4.5336e-01,  9.4306e-01, -1.1859e+00, -6.4501e-01,\n",
+       "         -5.0808e-01,  6.3375e-02,  4.6673e-01, -1.9004e+00,  1.3389e-01,\n",
+       "          9.1059e-01, -2.5166e+00,  2.1304e-02, -9.3343e-01, -5.2102e-01,\n",
+       "          1.2032e+00,  1.4227e+00, -1.1040e+00,  1.4431e+00, -1.5508e+00,\n",
+       "          1.6041e+00,  1.0124e+00,  1.4588e+00, -1.2585e+00,  3.5969e-01,\n",
+       "         -4.1557e-01, -1.0155e+00,  7.9462e-01,  1.9004e+00,  6.1278e-01,\n",
+       "          4.7402e-01,  1.4179e+00, -1.0406e+00,  6.5128e-01,  2.2696e-01,\n",
+       "          1.2652e+00,  1.3615e+00, -7.4805e-01, -4.5351e-02,  4.6110e-01]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bnmean_running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it is very close (it shouldn't be identical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.0674192905426025\n",
+      "val 2.105670690536499\n"
+     ]
+    }
+   ],
+   "source": [
+    "# and we got better validation loss\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def split_loss(split):\n",
+    "    x, y = {\n",
+    "        'train': (Xtr, Ytr),\n",
+    "        'val': (Xdev, Ydev),\n",
+    "        'test': (Xte, Yte),\n",
+    "    }[split]\n",
+    "    emb = C[x]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1 # hidden layer preactivation\n",
+    "    # hpreact = bngain * (hpreact - hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias # Batch Normalization!!!\n",
+    "    hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias # actually bnbias handles needed bias\n",
+    "    h = torch.tanh(hpreact)\n",
+    "    logits = h @ W2 + b2\n",
+    "    loss = F.cross_entropy(logits, y)\n",
+    "    print(split, loss.item())\n",
+    "\n",
+    "split_loss('train')\n",
+    "split_loss('val')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
