--- a/karpathy_videos/04_mlp_act_and_grad.ipynb
+++ b/karpathy_videos/04_mlp_act_and_grad.ipynb
@@ -2305,6 +2305,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Here we see that out lasy layer has much greater gradients. It means that our last layer is training much faster than other layers. We can fix it with other optimizers (or just train everything longer)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
