--- a/karpathy_videos/04_mlp_act_and_grad.ipynb
+++ b/karpathy_videos/04_mlp_act_and_grad.ipynb
@@ -2339,6 +2339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# If our learning rate is very low our updates will be very small (much below the black line)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
